# pingcrm-vue-rs

./: .env.example  Cargo.toml  README.md  cli  justfile
app/: Cargo.toml  main.rs
app/src/: main.rs
db/: Cargo.toml  main.rs  migrations.rs
db/migrations/: m_2023_09_01_000000_create_fang_tasks_table.rs  m_2023_09_01_000001_create_users_table.rs  m_2023_09_01_000002_create_posts_table.rs
db/seeders/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: Cargo.toml
migrations/src/: main.rs  migrations.rs
models/: Cargo.toml  lib.rs
models/src/: lib.rs
queue/: Cargo.toml
queue/src/: jobs.rs  lib.rs  tasks.rs
seed/: Cargo.toml
seed/src/: main.rs
