[workspace]
members = ["app", "models", "db"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
ensemble = { git = "https://github.com/m1guelpf/ensemble", features = ["mysql"]}
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.75"
