[package]
name = "app"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "main.rs"

[dependencies]
tokio = { workspace = true }
ensemble = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
models = { path = "../models" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.5"