[package]
name = "app"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "main.rs"

[dependencies]
tokio = { workspace = true }
ensemble = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
models = { path = "../models" }
queue = { path = "../queue" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.5"
axum-trace-id = "0.1.0"
tower-http = { version = "0.4.0", features = ["trace"] }
