[package]
name = "db"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "db"
path = "main.rs"

[dependencies]
tokio = { workspace = true }
ensemble = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
models = { path = "../models" }
clap = { version = "4.4.1", features = ["derive"] }
rand = "0.8.5"
faker_rand = "0.1.1"
