[package]
name = "queue"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fang = { version = "0.10.4" , features = ["asynk", "derive-error" ], default-features = false }
tokio = { workspace = true }
ensemble = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
models = { path = "../models" }
serde = { version = "1.0.183", features = ["derive"] }
async-trait = "0.1.73"
typetag = "0.2.13"
