[package]
name = "queue"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
job_queue = "0.0.12"
tokio = { workspace = true }
ensemble = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
models = { path = "../models" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"